// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view list descending orderBy + first + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "70",
            ],
            "inviterId": "70",
            "username": "estell684",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "60",
            ],
            "inviterId": "60",
            "username": "christa878",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "58",
            ],
            "inviterId": "58",
            "username": "eladio832",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list descending orderBy + first 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "50",
            "boardName": "Sed assumenda repellendus",
            "inviteCount": 4,
            "invitees": Array [
              "51",
              "14",
              "4",
              "90",
            ],
            "inviterId": "84",
            "username": "anne750",
          },
        },
        Object {
          "node": Object {
            "boardId": "49",
            "boardName": "Odit qui",
            "inviteCount": 4,
            "invitees": Array [
              "100",
              "70",
              "8",
              "46",
            ],
            "inviterId": "26",
            "username": "araceli794",
          },
        },
        Object {
          "node": Object {
            "boardId": "48",
            "boardName": "Nobis totam",
            "inviteCount": 4,
            "invitees": Array [
              "81",
              "103",
              "21",
              "107",
            ],
            "inviterId": "41",
            "username": "myrl112",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list descending orderBy + last + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "5",
            ],
            "inviterId": "5",
            "username": "griffin807",
          },
        },
        Object {
          "node": Object {
            "boardId": "3",
            "boardName": "Occaecati adipisci vel",
            "inviteCount": 4,
            "invitees": Array [
              "1",
              "38",
              "24",
              "61",
            ],
            "inviterId": "79",
            "username": "joe922",
          },
        },
        Object {
          "node": Object {
            "boardId": "2",
            "boardName": "Et eum",
            "inviteCount": 2,
            "invitees": Array [
              "40",
              "92",
            ],
            "inviterId": "46",
            "username": "antonia919",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list descending orderBy + last 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "63",
            ],
            "inviterId": "63",
            "username": "sibyl966",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "42",
            ],
            "inviterId": "42",
            "username": "alva280",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "34",
            ],
            "inviterId": "34",
            "username": "arlie128",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list descending orderBy + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "104",
            ],
            "inviterId": "104",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "101",
            ],
            "inviterId": "101",
            "username": "isidro418",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "70",
            ],
            "inviterId": "70",
            "username": "estell684",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "60",
            ],
            "inviterId": "60",
            "username": "christa878",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "58",
            ],
            "inviterId": "58",
            "username": "eladio832",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "53",
            ],
            "inviterId": "53",
            "username": "emelie578",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "49",
            ],
            "inviterId": "49",
            "username": "nettie731",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "33",
            ],
            "inviterId": "33",
            "username": "hiram985",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "26",
            ],
            "inviterId": "26",
            "username": "araceli794",
          },
        },
        Object {
          "node": Object {
            "boardId": "46",
            "boardName": "Et architecto",
            "inviteCount": 4,
            "invitees": Array [
              "32",
              "109",
              "40",
              "45",
            ],
            "inviterId": "63",
            "username": "sibyl966",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list descending orderBy 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "50",
            "boardName": "Sed assumenda repellendus",
            "inviteCount": 4,
            "invitees": Array [
              "51",
              "14",
              "4",
              "90",
            ],
            "inviterId": "84",
            "username": "anne750",
          },
        },
        Object {
          "node": Object {
            "boardId": "49",
            "boardName": "Odit qui",
            "inviteCount": 4,
            "invitees": Array [
              "100",
              "70",
              "8",
              "46",
            ],
            "inviterId": "26",
            "username": "araceli794",
          },
        },
        Object {
          "node": Object {
            "boardId": "48",
            "boardName": "Nobis totam",
            "inviteCount": 4,
            "invitees": Array [
              "81",
              "103",
              "21",
              "107",
            ],
            "inviterId": "41",
            "username": "myrl112",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "104",
            ],
            "inviterId": "104",
            "username": "joe154",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "101",
            ],
            "inviterId": "101",
            "username": "isidro418",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "70",
            ],
            "inviterId": "70",
            "username": "estell684",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "60",
            ],
            "inviterId": "60",
            "username": "christa878",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "58",
            ],
            "inviterId": "58",
            "username": "eladio832",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "53",
            ],
            "inviterId": "53",
            "username": "emelie578",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "49",
            ],
            "inviterId": "49",
            "username": "nettie731",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list filter 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "15",
            "boardName": "Sunt nobis",
            "inviteCount": 1,
            "invitees": Array [
              "11",
            ],
            "inviterId": "11",
            "username": "hazel528",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`view list filter with invalid attributes (reject) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Field "someAttributes" is not defined by type "BoardMemberViewFilter".],
  ],
}
`;

exports[`view list filter with logical operators AND AND + last 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "37",
            "boardName": "Voluptate tempora veritatis",
            "inviteCount": 1,
            "invitees": Array [
              "3",
            ],
            "inviterId": "3",
            "username": "fleta342",
          },
        },
        Object {
          "node": Object {
            "boardId": "37",
            "boardName": "Voluptate tempora veritatis",
            "inviteCount": 1,
            "invitees": Array [
              "4",
            ],
            "inviterId": "4",
            "username": "victor821",
          },
        },
        Object {
          "node": Object {
            "boardId": "38",
            "boardName": "Nesciunt nihil enim",
            "inviteCount": 1,
            "invitees": Array [
              "20",
            ],
            "inviterId": "20",
            "username": "katrina560",
          },
        },
        Object {
          "node": Object {
            "boardId": "38",
            "boardName": "Nesciunt nihil enim",
            "inviteCount": 1,
            "invitees": Array [
              "67",
            ],
            "inviterId": "67",
            "username": "jonathon586",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 4,
      "totalCount": 18,
    },
  },
}
`;

exports[`view list filter with logical operators AND AND + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "32",
            "boardName": "Aliquam voluptates",
            "inviteCount": 6,
            "invitees": Array [
              "68",
              "36",
              "51",
              "61",
              "107",
              "21",
            ],
            "inviterId": "78",
            "username": "tiana281",
          },
        },
        Object {
          "node": Object {
            "boardId": "33",
            "boardName": "Suscipit quas",
            "inviteCount": 4,
            "invitees": Array [
              "41",
              "59",
              "8",
              "40",
            ],
            "inviterId": "47",
            "username": "theodore123",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "12",
            ],
            "inviterId": "12",
            "username": "emmet741",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "43",
            ],
            "inviterId": "43",
            "username": "stephen528",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "106",
            ],
            "inviterId": "106",
            "username": "stan321",
          },
        },
        Object {
          "node": Object {
            "boardId": "35",
            "boardName": "Voluptatum necessitatibus molestias",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "35",
            "boardName": "Voluptatum necessitatibus molestias",
            "inviteCount": 1,
            "invitees": Array [
              "82",
            ],
            "inviterId": "82",
            "username": "dortha300",
          },
        },
        Object {
          "node": Object {
            "boardId": "36",
            "boardName": "Consectetur blanditiis consequatur",
            "inviteCount": 1,
            "invitees": Array [
              "7",
            ],
            "inviterId": "7",
            "username": "autumn520",
          },
        },
        Object {
          "node": Object {
            "boardId": "36",
            "boardName": "Consectetur blanditiis consequatur",
            "inviteCount": 1,
            "invitees": Array [
              "67",
            ],
            "inviterId": "67",
            "username": "jonathon586",
          },
        },
        Object {
          "node": Object {
            "boardId": "36",
            "boardName": "Consectetur blanditiis consequatur",
            "inviteCount": 1,
            "invitees": Array [
              "106",
            ],
            "inviterId": "106",
            "username": "stan321",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 18,
    },
  },
}
`;

exports[`view list filter with logical operators AND AND + orderBy 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "69",
            ],
            "inviterId": "69",
            "username": "antone347",
          },
        },
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "80",
            ],
            "inviterId": "80",
            "username": "serenity662",
          },
        },
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "99",
            ],
            "inviterId": "99",
            "username": "antonina448",
          },
        },
        Object {
          "node": Object {
            "boardId": "32",
            "boardName": "Aliquam voluptates",
            "inviteCount": 6,
            "invitees": Array [
              "68",
              "36",
              "51",
              "61",
              "107",
              "21",
            ],
            "inviterId": "78",
            "username": "tiana281",
          },
        },
        Object {
          "node": Object {
            "boardId": "33",
            "boardName": "Suscipit quas",
            "inviteCount": 4,
            "invitees": Array [
              "41",
              "59",
              "8",
              "40",
            ],
            "inviterId": "47",
            "username": "theodore123",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "12",
            ],
            "inviterId": "12",
            "username": "emmet741",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "43",
            ],
            "inviterId": "43",
            "username": "stephen528",
          },
        },
        Object {
          "node": Object {
            "boardId": "34",
            "boardName": "Voluptas dolor",
            "inviteCount": 1,
            "invitees": Array [
              "106",
            ],
            "inviterId": "106",
            "username": "stan321",
          },
        },
        Object {
          "node": Object {
            "boardId": "35",
            "boardName": "Voluptatum necessitatibus molestias",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 18,
    },
  },
}
`;

exports[`view list filter with logical operators OR OR + last 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "68",
            ],
            "inviterId": "68",
            "username": "ryan372",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "96",
            ],
            "inviterId": "96",
            "username": "faustino795",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "100",
            ],
            "inviterId": "100",
            "username": "vernice306",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 13,
    },
  },
}
`;

exports[`view list filter with logical operators OR OR + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "15",
            "boardName": "Sunt nobis",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "18",
            "boardName": "In ipsum est",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "35",
            "boardName": "Voluptatum necessitatibus molestias",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "41",
            "boardName": "Enim dolore",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "3",
            ],
            "inviterId": "3",
            "username": "fleta342",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "44",
            ],
            "inviterId": "44",
            "username": "freda641",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "55",
            ],
            "inviterId": "55",
            "username": "hailie632",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "59",
            ],
            "inviterId": "59",
            "username": "kara119",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "68",
            ],
            "inviterId": "68",
            "username": "ryan372",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 13,
    },
  },
}
`;

exports[`view list filter with logical operators OR OR + orderBy 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "14",
            "boardName": "Id cum",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "15",
            "boardName": "Sunt nobis",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "18",
            "boardName": "In ipsum est",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "31",
            "boardName": "Culpa facilis",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "35",
            "boardName": "Voluptatum necessitatibus molestias",
            "inviteCount": 1,
            "invitees": Array [
              "21",
            ],
            "inviterId": "21",
            "username": "weston422",
          },
        },
        Object {
          "node": Object {
            "boardId": "41",
            "boardName": "Enim dolore",
            "inviteCount": 1,
            "invitees": Array [
              "95",
            ],
            "inviterId": "95",
            "username": "joel356",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "3",
            ],
            "inviterId": "3",
            "username": "fleta342",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "44",
            ],
            "inviterId": "44",
            "username": "freda641",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "55",
            ],
            "inviterId": "55",
            "username": "hailie632",
          },
        },
        Object {
          "node": Object {
            "boardId": "44",
            "boardName": "Qui rem ut",
            "inviteCount": 1,
            "invitees": Array [
              "59",
            ],
            "inviterId": "59",
            "username": "kara119",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 13,
    },
  },
}
`;

exports[`view list filter with logical operators filter with nested logical operators AND + OR 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "32",
            "boardName": "Aliquam voluptates",
            "inviteCount": 6,
            "invitees": Array [
              "36",
              "107",
              "51",
              "21",
              "68",
              "61",
            ],
            "inviterId": "78",
            "username": "tiana281",
          },
        },
        Object {
          "node": Object {
            "boardId": "36",
            "boardName": "Consectetur blanditiis consequatur",
            "inviteCount": 1,
            "invitees": Array [
              "67",
            ],
            "inviterId": "67",
            "username": "jonathon586",
          },
        },
        Object {
          "node": Object {
            "boardId": "38",
            "boardName": "Nesciunt nihil enim",
            "inviteCount": 1,
            "invitees": Array [
              "67",
            ],
            "inviterId": "67",
            "username": "jonathon586",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 3,
    },
  },
}
`;

exports[`view list filter with mutliple attributes 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "24",
            "boardName": "Non iusto unde",
            "inviteCount": 7,
            "invitees": Array [
              "23",
              "31",
              "40",
              "89",
              "37",
              "51",
              "17",
            ],
            "inviterId": "30",
            "username": "carissa722",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`view list filter with no results 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 0,
      "totalCount": 0,
    },
  },
}
`;

exports[`view list orderBy + first + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "2",
            "boardName": "Et eum",
            "inviteCount": 2,
            "invitees": Array [
              "40",
              "92",
            ],
            "inviterId": "46",
            "username": "antonia919",
          },
        },
        Object {
          "node": Object {
            "boardId": "3",
            "boardName": "Occaecati adipisci vel",
            "inviteCount": 4,
            "invitees": Array [
              "1",
              "38",
              "24",
              "61",
            ],
            "inviterId": "79",
            "username": "joe922",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "5",
            ],
            "inviterId": "5",
            "username": "griffin807",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy + first 0 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
      "resultCount": 0,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy + first 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "34",
            ],
            "inviterId": "34",
            "username": "arlie128",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "42",
            ],
            "inviterId": "42",
            "username": "alva280",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "63",
            ],
            "inviterId": "63",
            "username": "sibyl966",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy + last + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "58",
            ],
            "inviterId": "58",
            "username": "eladio832",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "60",
            ],
            "inviterId": "60",
            "username": "christa878",
          },
        },
        Object {
          "node": Object {
            "boardId": "47",
            "boardName": "Accusamus sequi",
            "inviteCount": 1,
            "invitees": Array [
              "70",
            ],
            "inviterId": "70",
            "username": "estell684",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy + last 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "48",
            "boardName": "Nobis totam",
            "inviteCount": 4,
            "invitees": Array [
              "81",
              "103",
              "21",
              "107",
            ],
            "inviterId": "41",
            "username": "myrl112",
          },
        },
        Object {
          "node": Object {
            "boardId": "49",
            "boardName": "Odit qui",
            "inviteCount": 4,
            "invitees": Array [
              "100",
              "70",
              "8",
              "46",
            ],
            "inviterId": "26",
            "username": "araceli794",
          },
        },
        Object {
          "node": Object {
            "boardId": "50",
            "boardName": "Sed assumenda repellendus",
            "inviteCount": 4,
            "invitees": Array [
              "51",
              "14",
              "4",
              "90",
            ],
            "inviterId": "84",
            "username": "anne750",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": true,
      },
      "resultCount": 3,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy + offset 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "82",
            ],
            "inviterId": "82",
            "username": "dortha300",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "91",
            ],
            "inviterId": "91",
            "username": "lionel825",
          },
        },
        Object {
          "node": Object {
            "boardId": "2",
            "boardName": "Et eum",
            "inviteCount": 2,
            "invitees": Array [
              "40",
              "92",
            ],
            "inviterId": "46",
            "username": "antonia919",
          },
        },
        Object {
          "node": Object {
            "boardId": "3",
            "boardName": "Occaecati adipisci vel",
            "inviteCount": 4,
            "invitees": Array [
              "1",
              "38",
              "24",
              "61",
            ],
            "inviterId": "79",
            "username": "joe922",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "5",
            ],
            "inviterId": "5",
            "username": "griffin807",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "9",
            ],
            "inviterId": "9",
            "username": "omari409",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "17",
            ],
            "inviterId": "17",
            "username": "fred777",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "30",
            ],
            "inviterId": "30",
            "username": "carissa722",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "33",
            ],
            "inviterId": "33",
            "username": "hiram985",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "50",
            ],
            "inviterId": "50",
            "username": "frank367",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list orderBy 1`] = `
Object {
  "data": Object {
    "allBoardMemberViews": Object {
      "edges": Array [
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "34",
            ],
            "inviterId": "34",
            "username": "arlie128",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "42",
            ],
            "inviterId": "42",
            "username": "alva280",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "63",
            ],
            "inviterId": "63",
            "username": "sibyl966",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "82",
            ],
            "inviterId": "82",
            "username": "dortha300",
          },
        },
        Object {
          "node": Object {
            "boardId": "1",
            "boardName": "Reiciendis quaerat",
            "inviteCount": 1,
            "invitees": Array [
              "91",
            ],
            "inviterId": "91",
            "username": "lionel825",
          },
        },
        Object {
          "node": Object {
            "boardId": "2",
            "boardName": "Et eum",
            "inviteCount": 2,
            "invitees": Array [
              "40",
              "92",
            ],
            "inviterId": "46",
            "username": "antonia919",
          },
        },
        Object {
          "node": Object {
            "boardId": "3",
            "boardName": "Occaecati adipisci vel",
            "inviteCount": 4,
            "invitees": Array [
              "1",
              "38",
              "24",
              "61",
            ],
            "inviterId": "79",
            "username": "joe922",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "5",
            ],
            "inviterId": "5",
            "username": "griffin807",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "9",
            ],
            "inviterId": "9",
            "username": "omari409",
          },
        },
        Object {
          "node": Object {
            "boardId": "4",
            "boardName": "Delectus qui maxime",
            "inviteCount": 1,
            "invitees": Array [
              "17",
            ],
            "inviterId": "17",
            "username": "fred777",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": true,
        "hasPreviousPage": false,
      },
      "resultCount": 10,
      "totalCount": 220,
    },
  },
}
`;

exports[`view list reverse connection + first 1`] = `
Object {
  "data": Object {
    "profileById": Object {
      "boardMemberViewsByInviterId": Object {
        "edges": Array [
          Object {
            "node": Object {
              "boardId": "3",
              "boardName": "Occaecati adipisci vel",
              "inviteCount": 4,
              "invitees": Array [
                "24",
                "38",
                "1",
                "61",
              ],
              "inviterId": "79",
              "username": "joe922",
            },
          },
        ],
        "pageInfo": Object {
          "hasNextPage": true,
          "hasPreviousPage": false,
        },
        "resultCount": 1,
        "totalCount": 4,
      },
      "id": "79",
    },
  },
}
`;

exports[`view list reverse connection 1`] = `
Object {
  "data": Object {
    "profileById": Object {
      "boardMemberViewsByInviterId": Object {
        "edges": Array [
          Object {
            "node": Object {
              "boardId": "3",
              "boardName": "Occaecati adipisci vel",
              "inviteCount": 4,
              "invitees": Array [
                "24",
                "38",
                "1",
                "61",
              ],
              "inviterId": "79",
              "username": "joe922",
            },
          },
          Object {
            "node": Object {
              "boardId": "13",
              "boardName": "Suscipit aut cum",
              "inviteCount": 1,
              "invitees": Array [
                "79",
              ],
              "inviterId": "79",
              "username": "joe922",
            },
          },
          Object {
            "node": Object {
              "boardId": "25",
              "boardName": "Libero similique vitae",
              "inviteCount": 1,
              "invitees": Array [
                "79",
              ],
              "inviterId": "79",
              "username": "joe922",
            },
          },
          Object {
            "node": Object {
              "boardId": "29",
              "boardName": "Ut provident assumenda",
              "inviteCount": 1,
              "invitees": Array [
                "79",
              ],
              "inviterId": "79",
              "username": "joe922",
            },
          },
        ],
        "pageInfo": Object {
          "hasNextPage": false,
          "hasPreviousPage": false,
        },
        "resultCount": 4,
        "totalCount": 4,
      },
      "id": "79",
    },
  },
}
`;
